Add new program in OpenGA
add new program "swapMutationTwoPart.java" in mutation and set in
"TPmTSPSGAOneChromosome1.java"

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -8,4 +8,4 @@ file.reference.openga.zip=C:\\Documents and Settings\\shihhsin\\My Documents\\ct
 file.reference.src-openga=C:\\Users\\nhu\\jbproject\\OpenGA\\src\\openga
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/Users/user/Library/Application Support/NetBeans/8.0.2/build.properties
+user.properties.file=C:\\Users\\UlyssesZhang\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
