Two new mTSP algorithms SGGA and SGA_HEU
We add the program of Self-Guided Genetic Algorithm and the SGA with
heuristic into the project.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -41,6 +41,7 @@ endorsed.classpath=
 excludes=
 file.reference.jcommon-0.8.9.jar=lib/jcommon-0.8.9.jar
 file.reference.jfreechart-0.9.14.jar=lib/jfreechart-0.9.14.jar
+file.reference.jsc.jar=lib/jsc.jar
 file.reference.nhu-jbproject=../jbproject
 file.reference.openga-lib=lib
 file.reference.OpenGA-src=../jbproject/OpenGA/src
@@ -51,7 +52,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.openga-lib}:\
     ${file.reference.jcommon-0.8.9.jar}:\
-    ${file.reference.jfreechart-0.9.14.jar}
+    ${file.reference.jfreechart-0.9.14.jar}:\
+    ${file.reference.jsc.jar}
 # \u4ee5\u7a7a\u683c\u5206\u9694\u7684\u984d\u5916 javac \u9078\u9805\u5217\u8868
 javac.compilerargs=-Xlint
 javac.deprecation=false
