Send mail support
We may acknowledge the experimental results.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -46,6 +46,7 @@ file.reference.nhu-jbproject=../jbproject
 file.reference.openga-lib=lib
 file.reference.OpenGA-src=../jbproject/OpenGA/src
 file.reference.openga.zip=../openga.zip
+file.reference.simple-java-mail-5.1.0.jar=lib/simple-java-mail-5.1.0.jar
 file.reference.src-openga=../jbproject/OpenGA/src/openga
 includes=**
 jar.compress=false
@@ -53,7 +54,8 @@ javac.classpath=\
     ${file.reference.openga-lib}:\
     ${file.reference.jcommon-0.8.9.jar}:\
     ${file.reference.jfreechart-0.9.14.jar}:\
-    ${file.reference.jsc.jar}
+    ${file.reference.jsc.jar}:\
+    ${file.reference.simple-java-mail-5.1.0.jar}
 # \u4ee5\u7a7a\u683c\u5206\u9694\u7684\u984d\u5916 javac \u9078\u9805\u5217\u8868
 javac.compilerargs=-Xlint
 javac.deprecation=false
