--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -42,6 +42,7 @@ excludes=
 file.reference.jcommon-0.8.9.jar=lib/jcommon-0.8.9.jar
 file.reference.jfreechart-0.9.14.jar=lib/jfreechart-0.9.14.jar
 file.reference.jsc.jar=lib/jsc.jar
+file.reference.mail-1.4.7.jar=lib/mail-1.4.7.jar
 file.reference.nhu-jbproject=../jbproject
 file.reference.openga-lib=lib
 file.reference.OpenGA-src=../jbproject/OpenGA/src
@@ -55,7 +56,8 @@ javac.classpath=\
     ${file.reference.jcommon-0.8.9.jar}:\
     ${file.reference.jfreechart-0.9.14.jar}:\
     ${file.reference.jsc.jar}:\
-    ${file.reference.simple-java-mail-5.1.0.jar}
+    ${file.reference.simple-java-mail-5.1.0.jar}:\
+    ${file.reference.mail-1.4.7.jar}
 # \u4ee5\u7a7a\u683c\u5206\u9694\u7684\u984d\u5916 javac \u9078\u9805\u5217\u8868
 javac.compilerargs=-Xlint
 javac.deprecation=false
