--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -48,6 +48,9 @@ file.reference.openga-lib=lib
 file.reference.OpenGA-src=../jbproject/OpenGA/src
 file.reference.openga.zip=../openga.zip
 file.reference.simple-java-mail-5.1.0.jar=lib/simple-java-mail-5.1.0.jar
+file.reference.slf4j-api-1.7.25.jar=lib/slf4j-api-1.7.25.jar
+file.reference.slf4j-ext-1.7.25.jar=lib/slf4j-ext-1.7.25.jar
+file.reference.slf4j-simple-1.7.25.jar=lib/slf4j-simple-1.7.25.jar
 file.reference.src-openga=../jbproject/OpenGA/src/openga
 includes=**
 jar.compress=false
@@ -57,7 +60,10 @@ javac.classpath=\
     ${file.reference.jfreechart-0.9.14.jar}:\
     ${file.reference.jsc.jar}:\
     ${file.reference.simple-java-mail-5.1.0.jar}:\
-    ${file.reference.mail-1.4.7.jar}
+    ${file.reference.mail-1.4.7.jar}:\
+    ${file.reference.slf4j-api-1.7.25.jar}:\
+    ${file.reference.slf4j-ext-1.7.25.jar}:\
+    ${file.reference.slf4j-simple-1.7.25.jar}
 # \u4ee5\u7a7a\u683c\u5206\u9694\u7684\u984d\u5916 javac \u9078\u9805\u5217\u8868
 javac.compilerargs=-Xlint
 javac.deprecation=false
