--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -52,6 +52,7 @@ file.reference.slf4j-api-1.7.25.jar=lib/slf4j-api-1.7.25.jar
 file.reference.slf4j-ext-1.7.25.jar=lib/slf4j-ext-1.7.25.jar
 file.reference.slf4j-simple-1.7.25.jar=lib/slf4j-simple-1.7.25.jar
 file.reference.src-openga=../jbproject/OpenGA/src/openga
+file.reference.weka.jar=lib/weka.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -63,10 +64,12 @@ javac.classpath=\
     ${file.reference.mail-1.4.7.jar}:\
     ${file.reference.slf4j-api-1.7.25.jar}:\
     ${file.reference.slf4j-ext-1.7.25.jar}:\
-    ${file.reference.slf4j-simple-1.7.25.jar}
+    ${file.reference.slf4j-simple-1.7.25.jar}:\
+    ${file.reference.weka.jar}
 # \u4ee5\u7a7a\u683c\u5206\u9694\u7684\u984d\u5916 javac \u9078\u9805\u5217\u8868
 javac.compilerargs=-Xlint
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.7
